# elk-antique-telephone-ai-operator

./: HARDWARE.md  README.md  SOFTWARE.md
config/: ai-service.conf  audio.conf  gpio.conf  sip.conf
scripts/: install-dependencies.sh  run-tests.sh  setup.sh
software/: .env.example  pyproject.toml
software/src/: __init__.py  main.py
software/src/core/: __init__.py  ai_operator.py  audio_processor.py  gpio_monitor.py  keyboard_simulator.py  pyvoip_patch.py  rtp_stream.py  voip_client.py
software/src/providers/: base.py
software/src/providers/conversation/: anthropic_provider.py  ollama_provider.py
software/src/providers/lookup/: google_places_provider.py
software/src/providers/stt/: whisper_provider.py
software/src/providers/tts/: piper_provider.py
software/src/utils/: __init__.py  config_manager.py  logger.py
software/tests/: __init__.py  test_ai_operator.py  test_audio.py  test_call_flow.py  test_gpio.py  test_lookup.py  test_system.py  test_voip_client.py
